# seqdesign-pytorch

./: LICENSE  README.md  autoregressive_model.py  autoregressive_train.py  data_loaders.py  functions.py  layers.py  linux_setup.sh  model_logging.py  requirements.txt  requirements_gpu.txt  run_autoregressive_fr.py  run_autoregressive_vae_fr.py  setup.cfg  setup.py  tf_reader.py  train_autoregressive_antibodies.py  train_autoregressive_antibody_cdr3s.py  train_autoregressive_antibody_cdr3s_ipi_selected.py  train_autoregressive_nanobodies.py  utils.py
calc_logprobs/: calc_logprobs_seqs_antibodies.py  calc_logprobs_seqs_antibody_cdr3s.py  calc_logprobs_seqs_antibody_cdr3s_ipi.py  calc_logprobs_seqs_fr.py
examples/: README.md  demo_calc_logprobs.sh  demo_generate.sh  demo_generate_fast.sh
seqdesign/scripts/: calc_logprobs_seqs_antibody_cdr3s.py  run_autoregressive_vae_fr.py  train_autoregressive_antibody_cdr3s.py  train_autoregressive_nanobodies.py
seqdesign_pt/: autoregressive_model.py  aws_utils.py  data_loaders.py  model_logging.py  tf_reader.py  version.py
seqdesign_pt/scripts/: calc_logprobs_seqs_fr.py  generate_sample_seqs_fr.py  run_autoregressive_fr.py  run_autoregressive_vae_fr.py  train_autoregressive_antibodies.py
src/seqdesign_pt/: autoregressive_train.py  data_loaders.py  functions.py  layers.py  model_logging.py  utils.py
src/seqdesign_pt/scripts/: calc_logprobs_seqs_fr.py  generate_sample_seqs_fr.py  run_autoregressive_fr.py  run_autoregressive_vae_fr.py
