[metadata]
name = seqdesign-pt
version = 1.0.1
author = Aaron Kollasch
author_email = aaron@kollasch.dev
description = Protein design and variant prediction using autoregressive generative models
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/aaronkollasch/seqdesign-pytorch
license = MIT
license_file = LICENSE
keywords = jupyter, remote, ssh, slurm, pexpect, orchestra, o2
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Utilities
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
setup_requires =
install_requires =
    torch
    scipy
    numpy
    scikit-learn
    gitpython
    pandas
    biopython
    pillow
python_requires = >=3.6
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
console_scripts =
    calc_logprobs_seqs_fr = seqdesign_pt.scripts.calc_logprobs_seqs_fr:main
    generate_sample_seqs_fr = seqdesign_pt.scripts.generate_sample_seqs_fr:main
    run_autoregressive_fr = seqdesign_pt.scripts.run_autoregressive_fr:main
